fix: ensuring code quality